--- a/src/utils/variablesSCSS/_variables.scss
+++ b/src/utils/variablesSCSS/_variables.scss
@@ -3,4 +3,5 @@ $color2: #0e1317;
 $color3: #090c0f;
 $color4: #B99272;
 $color5: rgba(255, 255, 255, 0.6);
+$color6: #454647;
 $fontFamily: "Oswald", sans-serif;
