creating a block form on the main page

--- a/src/page/main/components/blocks/popularDishes/popularDishes.module.scss
+++ b/src/page/main/components/blocks/popularDishes/popularDishes.module.scss
@@ -65,7 +65,7 @@
         background-color: rgba(0, 0, 0, 0.75);
     }
     &:hover {
-        background-size: calc(110% + 5%) calc(100% + 5%);
+        background-size: 115% 105%;
     }
 }
     
