--- a/src/utils/variablesSCSS/_variables.scss
+++ b/src/utils/variablesSCSS/_variables.scss
@@ -1,7 +1,8 @@
 $color1: #fff;
 $color2: #0e1317;
 $color3: #090c0f;
-$color4: #B99272;
+$color4: #b99272;
 $color5: rgba(255, 255, 255, 0.6);
 $color6: #454647;
+$color7: #21282f;
 $fontFamily: "Oswald", sans-serif;
