--- a/src/App.scss
+++ b/src/App.scss
@@ -27,3 +27,13 @@ html {
     margin: 0 auto;
 
 }
+
+input, select {
+    outline: none;
+}
+
+select {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+}
