--- a/src/components/blocks/header/header.module.scss
+++ b/src/components/blocks/header/header.module.scss
@@ -17,9 +17,11 @@
             
         }
         img {
-            width: 18px;
-            height: 18px;
-            fill: #810e0e;
+            display: inline-block;
+            width: 17px;
+            height: 17px;
+            filter: invert(62%) sepia(16%) saturate(735%) hue-rotate(345deg) brightness(94%) contrast(94%);
+
         }
     }
     .media {
