--- a/src/components/ui/buttons/button1/button.module.scss
+++ b/src/components/ui/buttons/button1/button.module.scss
@@ -7,7 +7,7 @@
   font-weight: 500;
   text-transform: uppercase;
   height: 50px;
-  color: #fff;
+  color: style.$color1;
   background-color: style.$color4;
   padding: 0 32px;
   border-radius: 5px;
@@ -19,17 +19,18 @@
     display: inline-block;
     width: 9px;
     height:9px;
-    border-top: 3px solid #fff;
-    border-right: 3px solid #fff;
+    border-top: 2px solid style.$color1;
+    border-right: 2px solid style.$color1;
     border-radius: 10%;
+    transition: 0.3s;
   }
 }
 
 .button:hover {
   color: style.$color4;
-  background-color: #fff;
+  background-color: style.$color1;
   div {
-    border-color: black;
+    border-color: style.$color4;
   }
 }
 
