--- a/src/page/main/components/blocks/popularMenu/dish/dish.module.scss
+++ b/src/page/main/components/blocks/popularMenu/dish/dish.module.scss
@@ -6,17 +6,41 @@
     width: 490px;
     margin-bottom: 55px;
     cursor: pointer;    
+    &:hover {
+        .image {
+        background-size: calc(120% + 5%) calc(100% + 5%);
+
+        }
+        .image::before {
+            background-color:rgba(185, 146, 114, 0.2);
+            
+        }
+    }
 }
 .image {
+    position: relative;
     width: 100px;
     height: 100px;
     background-size: 120% 100% ;
     background-position: center;
     border-radius: 30px;
     margin-right: 20px;
-}
-.block-info {
-
+    transition: 0.3s;
+    
+    &::before {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color:rgba(185, 146, 114, 0);
+        border-radius: 30px;
+        transition: 0.3s;
+    }
 }
 
 .block-info__top {
