--- a/src/components/blocks/VideoReviewComponent/VideoReviewComponent.module.scss
+++ b/src/components/blocks/VideoReviewComponent/VideoReviewComponent.module.scss
@@ -12,12 +12,13 @@
     width: 100%;
     height: 100%;
     &::before {
-        background-color: rgba(0,0,0, 0.5);
         position: absolute;
         content: '';
-        display: block;
-        height: 100%;
         width: 100%;
+        height: 100%;
+        background-color: #090c0f;
+        z-index: 1;
+        opacity: 0.75;
     }
 }
 
@@ -25,6 +26,7 @@
 
 .button {
     position: relative;
+    z-index: 2;
     cursor: pointer;
     border-radius: 50%;
     border: 1px solid rgba(255, 255, 255, 0.15);
@@ -52,6 +54,7 @@
 }
 .videoBlock {
     position: relative;
+    z-index: 2;
     width: 100%;
     height: 100%;
     display: none;
