--- a/src/components/blocks/VideoReviewComponent/VideoReviewComponent.module.scss
+++ b/src/components/blocks/VideoReviewComponent/VideoReviewComponent.module.scss
@@ -1,32 +1,21 @@
 
 .videoReviewComponent {
-    background-image: url(public/background/videoRevievBlock/background1.jpg);
+    background-image:linear-gradient(rgb(9, 12, 15, 0.75), rgb(9, 12, 15, 0.75)), url(public/background/videoRevievBlock/background1.jpg);
     background-size: cover ;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    &::before {
-        position: absolute;
-        content: '';
-        width: 100%;
-        height: 100%;
-        background-color: #090c0f;
-        z-index: 1;
-        opacity: 0.75;
-    }
 }
 
 
 
 .button {
-    position: relative;
-    z-index: 2;
+   
     cursor: pointer;
     border-radius: 50%;
     border: 1px solid rgba(255, 255, 255, 0.15);
@@ -53,8 +42,6 @@
     }
 }
 .videoBlock {
-    position: relative;
-    z-index: 2;
     width: 100%;
     height: 100%;
     display: none;
