--- a/src/page/main/components/blocks/Chiefs/Chief/Chief.module.scss
+++ b/src/page/main/components/blocks/Chiefs/Chief/Chief.module.scss
@@ -53,6 +53,8 @@
         img {
             border-radius: 5px;
             margin: 0 3px;
+            width: 35px;
+            height: 35px;
             cursor: pointer;
         }
     }
