create a footer and add it to the main page

--- a/src/utils/variablesSCSS/_variables.scss
+++ b/src/utils/variablesSCSS/_variables.scss
@@ -9,4 +9,6 @@ $color4: #b99272;
 $color5: rgba(255, 255, 255, 0.6);
 $color6: #454647;
 $color7: #21282f;
+$color8: #ff8a00;
 $fontFamily: "Oswald", sans-serif;
+$fontFamily1: "Merienda", sans-serif;
