--- a/src/components/blocks/header/components/blocks/navigationMenu/navigationMenu.module.scss
+++ b/src/components/blocks/header/components/blocks/navigationMenu/navigationMenu.module.scss
@@ -6,6 +6,7 @@
             font-size: 1.4rem;
             font-weight: 500;
             text-transform: uppercase;
+            font-family: "Roboto", sans-serif;
         }
     }
 }
