--- a/src/page/AboutUs/components/Blocks/Description/Description.module.scss
+++ b/src/page/AboutUs/components/Blocks/Description/Description.module.scss
@@ -83,7 +83,7 @@
     width: 40%;
     position: relative;
     visibility: visible;
-    background-image: url(/public/background/aboutUsPage/image2.jpg);
+    background-image:linear-gradient(rgba(192, 125, 0, 0.05), rgba(192, 125, 0, 0.05)), url(/public/background/aboutUsPage/image2.jpg);
     background-position: center top;
     
 }
