--- a/src/components/blocks/header/components/blocks/navigationMenu/navigationMenu.module.scss
+++ b/src/components/blocks/header/components/blocks/navigationMenu/navigationMenu.module.scss
@@ -1,12 +1,25 @@
-.navigation {
+@use "/src/utils/variablesSCSS/variables" as style;
+
+
+.nav {
     display: flex;
-    li {
-        margin: 0 15px;
-        a {
-            font-size: 1.4rem;
-            font-weight: 500;
-            text-transform: uppercase;
-            font-family: "Roboto", sans-serif;
-        }
+    
+}
+.navItem {
+    cursor: pointer;
+    position: relative;
+    margin: 0 15px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-family: "Roboto", sans-serif;
+    &:hover span{
+        color: style.$color4; 
+    }
+    
+    span {
+        transition: 0.7s;
+        line-height: 50px;
     }
 }
+
