--- a/src/page/main/components/blocks/Chiefs/Chiefs.module.scss
+++ b/src/page/main/components/blocks/Chiefs/Chiefs.module.scss
@@ -4,7 +4,7 @@
 .chiefs {
     background-color: style.$color2;
     padding: 130px 0 180px;
-    .subtitle {
+    .subTitle {
         text-transform: uppercase;
         text-align: center;
         font-size: 1.6rem;
