--- a/src/components/blocks/ProceedToBooking/ProceedToBooking.module.scss
+++ b/src/components/blocks/ProceedToBooking/ProceedToBooking.module.scss
@@ -2,15 +2,28 @@
 
 .ProceedToBooking {
     position: relative;
-    background-image:linear-gradient(rgb(14, 19, 23, 0.6), rgb(14, 19, 23, 0.6)), url(/public/background/proceedToBooking/image1.jpg);
+    background-image: url(/public/background/proceedToBooking/image1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    z-index: 2;
+    &::before {
+        position: absolute;
+        content: '';
+        display: block;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image:linear-gradient(rgb(14, 19, 23, 0.1), rgb(14, 19, 23, 0.1));
+        z-index: 3;
     
+    }
 }
 
 .contentBox {
+    background-image: url(/public/);
     padding: 70px 0;
     display: flex;
     justify-content: space-between;
