--- a/src/components/blocks/TopParallax/TopParallax.module.scss
+++ b/src/components/blocks/TopParallax/TopParallax.module.scss
@@ -1,7 +1,7 @@
 @use "/src/utils/variablesSCSS/variables" as style;
 
 
-.TopSlider {
+.TopParallax {
     position: relative;
     z-index: 1;
     &::before {
@@ -13,7 +13,7 @@
         top: 0;
         left: 0;
         position: absolute;
-        background: linear-gradient(rgb(9, 12, 15, 0.25), rgb(9, 12, 15, 0.25));
+        background: linear-gradient(rgb(9, 12, 15, 0.2), rgb(9, 12, 15, 0.2));
     }
 }
 
