fixed the icon color in the form field

--- a/src/components/common/ReservationForm/ReservationForm.module.scss
+++ b/src/components/common/ReservationForm/ReservationForm.module.scss
@@ -95,7 +95,8 @@
 }
 
 .characterEmail {
-    font-size: 2rem;
+    font-size: 18px;
     font-family: style.$fontFamily;
     font-weight: 500;
+    filter: contrast(100%);
 }
