--- a/src/pageComponents/base/main/AboutRestaurant/AboutRestaurant.module.scss
+++ b/src/pageComponents/base/main/AboutRestaurant/AboutRestaurant.module.scss
@@ -13,24 +13,8 @@
 
 .info {
     width: 40%;
-    
-    .subtitle {
-        text-transform: uppercase;
-        font-size: 1.6rem;
-        font-weight: 400;
-        color: style.$color4;
-        margin-bottom: 10px;
-    }
-
-    .title {
-        font-family: style.$fontFamily;
-
-        font-size: 4.2rem;
-        font-weight: 400;
-        margin-bottom: 30px;
-    }
-
     .description {
+        margin-top: 30px;
         line-height: 28px;
         font-size: 1.6rem;
         color: style.$color5;
@@ -46,7 +30,6 @@
         width: 69px;
         height: 75px;
         margin-right: 30px;
-
     }
     .coffeeBlock {
         .coffeeDescription {
