--- a/src/pageComponents/base/main/Chiefs/Chiefs.module.scss
+++ b/src/pageComponents/base/main/Chiefs/Chiefs.module.scss
@@ -4,22 +4,8 @@
 .chiefs {
     background-color: style.$color2;
     padding: 130px 0 180px;
-    .subTitle {
-        text-transform: uppercase;
-        text-align: center;
-        font-size: 1.6rem;
-        color: style.$color4;
-        margin-bottom: 10px;
-    }
-    .title {
-        font-family: style.$fontFamily;
-        font-size: 4.2rem;
-        text-align: center;
-        margin-bottom: 70px;
-        font-weight: 400;
-        
-    }
     .listChiefs {
+        margin-top: 70px;
         display: flex;
         justify-content: space-between;
     }
